Wed Jun 20 19:28:34 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * etc/dds.doxygen:

          Doxygen appears to be confused by ACE_THROW_SPEC((...)), attempting
          to fix this.

Wed Jun 20 18:42:11 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_tests.lst:

          Removed !STATIC from the majority of tests.  The changes below allow
          the tests to use SimpleTCP in a static build.  Later I'll go back and
          enable the other transports where needed.
          Also uncommented the tests/DCPS/BuiltInTopic/run_test.pl ignore_*
          tests since BuiltInTopics are now supported.  There is a bug with
          ignore_part but Yan will fix that shortly so for now we will see it
          as red on the scoreboard.

        * DevGuideExamples/DDS/Messenger/Messenger.mpc:
        * DevGuideExamples/DDS/Messenger/publisher.cpp:
        * DevGuideExamples/DDS/Messenger/subscriber.cpp:
        * performance-tests/DCPS/InfoRepo_population/InfoRepo_population.mpc:
        * performance-tests/DCPS/InfoRepo_population/publisher.cpp:
        * performance-tests/DCPS/InfoRepo_population/subscriber.cpp:
        * performance-tests/DCPS/TCPListenerTest/TCPListener.mpc:
        * performance-tests/DCPS/TCPListenerTest/publisher.cpp:
        * performance-tests/DCPS/TCPListenerTest/subscriber.cpp:
        * tests/DCPS/CorbaSeq/CorbaSeq.mpc:
        * tests/DCPS/CorbaSeq/publisher.cpp:
        * tests/DCPS/CorbaSeq/subscriber.cpp:
        * tests/DCPS/DcpsIntegration/dcps_integration.mpc:
        * tests/DCPS/DcpsIntegration/infrastructure.cpp:
        * tests/DCPS/DcpsIntegration/topic.cpp:
        * tests/DCPS/FooTest3_0/FooTest3_0.mpc:
        * tests/DCPS/FooTest3_0/pub_main.cpp:
        * tests/DCPS/FooTest3_0/sub_main.cpp:
        * tests/DCPS/FooTest3_1/FooTest3_1.mpc:
        * tests/DCPS/FooTest3_1/FooTest3_1NoKey.mpc:
        * tests/DCPS/FooTest3_1/pub_main.cpp:
        * tests/DCPS/FooTest3_1/sub_main.cpp: